SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Ocean_Review_Notes__c.object
<CustomObject>
    <fields>
        <fullName>Message_ID__c</fullName>
        <displayFormat>OCEAN-RVW-MSG-{00000}</displayFormat>
        <label>Message ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Ocean Review Notes</label>
    <nameField>
        <label>Ocean Review Notes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>oceanReviewNotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>